# autoresearch

./: .gitignore  analyse.py  analysis.ipynb  prepare.py  program.md  pyproject.toml  solution.py  submission.csv  train.py
mlebench/: data.py
mlebench/competitions/tabular-playground-series-may-2022/prepared/private/: gold_submission.csv  test.csv
mlebench/competitions/tabular-playground-series-may-2022/prepared/public/: sample_submission.csv  train.csv
tabular-playground-series-may-2022/prepared/: grade.py
tabular-playground-series-may-2022/prepared/private/: gold_submission.csv
tabular-playground-series-may-2022/prepared/public/: sample_submission.csv  test.csv
